# BooksProgress

./: .gitignore  CMakeLists.txt  Howmany  README.md  dane.txt  main.cpp  pages.cpp  pages.h  run.sh  testkurwa.cpp
.devcontainer/: devcontainer.json
.github/workflows/: linter.yml
include/: BookStatistic.h  BookStatistic.hpp  File.hpp  Functionality.h  HowManyPages.h  IBookStatistic.hpp  IFile.hpp  IProgram.hpp  Pages.h  Program.hpp  ProgramMode.h  ProgramMode.hpp  pages.h
src/: BookStatistic.cpp  File.cpp  Functionality.cpp  HowManyPages.cpp  Program.cpp  ProgramMode.cpp  main.cpp  pages.cpp
uts/: BookStatisticTests.cpp  FileTests.cpp  Foo.cpp
